# budgeting-app

./: .gitignore  App.tsx  README.md  app.json  dump.rdb  package-lock.json  package.json
.github/workflows/: gitleaks.yml  lint_and_test.yml  prod.yml
backend/: Dockerfile  compose.yaml  package-lock.json  package.json
backend/db/: password.txt
backend/src/: server.ts
frontend/: .eslintignore  .eslintrc.json  App.tsx  package-lock.json  package.json
frontend/src/: Stuff.tsx
rust_api/: Cargo.toml  docker-compose.yml
rust_api/migrations/: 20231203183717_up.sql
rust_api/src/: main  main.rs
src/: stuff.tsx
