[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.1"
dotenvy = "0.15.7"
hyper = "1.0.1"
serde = "1.0.193"
sqlx = "0.7.3"
tokio = "1.34.0"

[dev-dependencies]
tower = "0.4.13"
